data/interfaces/default/css/tautulli.css
/* ... */
.dashboard-activity-info-scroller.scrollbar-macosx > .scroll-element .scroll-bar {
    background-color: #999;
}
.dashboard-activity-info {
    width: 100%;
    font-size: 12px;
    padding: 5px 5px 5px 15px;
    position: relative;
}
.dashboard-activity-info-list {
    margin-bottom: 20px;
    padding-right: 0;
}
.dashboard-activity-info-list:last-of-type {
    margin-bottom: 0;
}
.dashboard-activity-info-item {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: baseline;
    width: 100%;
    margin-bottom: 5px;
}
.dashboard-activity-info-item:last-of-type {
    margin-bottom: 0;
}
.dashboard-activity-info-item .sub-heading {
    height: 100%;
    width: 60px;
    color: #aaa;
    font-size: 10px;
    text-align: right;
    text-transform: uppercase;
    line-height: 14px;
    -webkit-flex-shrink: 0;
    flex-shrink: 0;
}
.dashboard-activity-info-item .sub-value {
    margin-left: 10px;
    text-align: left;
    line-height: 14px;
    -webkit-flex-grow: 1;
    flex-grow: 1;
}
.dashboard-activity-info-item .sub-value.platform-right {
    margin-right: 55px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}
.dashboard-activity-info-item .sub-value.time-right {
    margin-right: 60px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}
.dashboard-activity-info-item .sub-value .ip-container {
    display: inline-flex;
}
.dashboard-activity-info-item .sub-value .ip-address {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 125px;
}
.dashboard-activity-info-time {
    position: absolute;
    top: 200px;
    right: 10px;
    text-align: right;
    font-size: 10px;
    z-index: 2;
}
.dashboard-activity-progress {
    width: 100%;
    height: 5px;
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
	transform-origin: top;
    overflow: hidden;
}
.dashboard-activity-progress-bar {
    background-color: #111;
    height: 100%;
    width: 100%;
    position: relative;
    overflow: hidden;
}
.dashboard-activity-progress .buffer-bar {
    padding-right: 3px;
    font-size: x-small;
    text-align: right;
    line-height: 14px;
    color: rgba(255, 255, 255, 0);
    background-color: #444;
    position: absolute;
    height: 100%;
    max-width: 100%;
    overflow: hidden;
}
.dashboard-activity-progress .progress-bar {
    padding-right: 3px;
    font-size: x-small;
    text-align: right;
    line-height: 14px;
    color: rgba(255, 255, 255, 0);
    background-color: #faa732;
    background-image: -moz-linear-gradient(top, #fbb450, #f89406);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#f89406));
    background-image: -webkit-linear-gradient(top, #fbb450, #f89406);
    background-image: -o-linear-gradient(top, #fbb450, #f89406);
    background-image: linear-gradient(to bottom, #fbb450, #f89406);
    background-repeat: repeat-x;
    position: absolute;
    height: 100%;
    max-width: 100%;
    overflow: hidden;
}
.dashboard-activity-container:hover {
    height: 249px;
}
.dashboard-activity-container:hover .dashboard-activity-progress {
    height: 14px;
}
.dashboard-activity-container:hover .progress-bar {
    color: rgba(255, 255, 255, 1);
    background-image: -webkit-linear-gradient(left,rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 50px);
    background-image: -moz-linear-gradient(left,rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 50px);
    background-image: linear-gradient(to left,rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 50px);
}
.dashboard-activity-container:hover .buffer-bar {
    color: rgba(255, 255, 255, 1);
    background-image: -webkit-linear-gradient(left,rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 50px);
    background-image: -moz-linear-gradient(left,rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 50px);
    background-image: linear-gradient(to left,rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 50px);
}
a:hover .dashboard-activity-poster,
a:hover .dashboard-activity-cover {
    -webkit-box-shadow: inset 0 0 0 2px #e9a049;
    -moz-box-shadow: inset 0 0 0 2px #e9a049;
    box-shadow: inset 0 0 0 2px #e9a049;
}
.dashboard-activity-container:hover .dashboard-activity-info-platform {
    opacity: 0;
}
.dashboard-activity-container:hover .dashboard-activity-terminate-session {
    background-color: rgba(0, 0, 0, 0.25);
    opacity: 1;
    cursor: pointer;
}
.dashboard-activity-metadata-wrapper {
    position: relative;
    width: 100%;
    height: 50px;
    font-size: 13px;
    padding: 0px 3px 0 3px;
}
.dashboard-activity-metadata-title-container {
    display: flex;
    flex-direction: row;
    font-size: 13px;
    font-weight: bold;
    line-height: 25px;
    color: #eee;
}
.dashboard-activity-metadata-play_state-icon {
    flex-basis: 25px;
    -webkit-flex-shrink: 0;
    flex-shrink: 0;
}
.dashboard-activity-metadata-title {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    width: 350px;
    -webkit-flex-grow: 1;
    flex-grow: 1;
}
.dashboard-activity-metadata-subtitle-container {
    display: flex;
    flex-direction: row;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    font-size: 13px;
    font-weight: bold;
    line-height: 25px;
    color: #999;
}
.dashboard-activity-metadata-media_type-icon {
    flex-basis: 25px;
    -webkit-flex-shrink: 0;
    flex-shrink: 0;
}
.dashboard-activity-metadata-subtitle {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    -webkit-flex-grow: 1;
    flex-grow: 1;
}
.dashboard-activity-metadata-user {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    text-align: right;
    max-width: 124px;
    flex-basis: 124px;
    -webkit-flex-shrink: 0;
    flex-shrink: 0;
}
/* ... */

